mongo db and qdrant

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,13 @@ TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 # OpenAI API Key (для GPT)
 OPENAI_API_KEY=your_openai_api_key_here
 
+# MongoDB Connection String
+MONGODB_URI=mongodb://localhost:27017/chatbot_db
+
+# Qdrant Vector Database
+QDRANT_URL=http://localhost:6333
+QDRANT_API_KEY=  # Оставьте пустым для локального Qdrant, укажите ключ для Qdrant Cloud
+
 # URLs магистратур ITMO
 MASTER_AI_URL=https://abit.itmo.ru/program/master/ai
 MASTER_AI_PRODUCT_URL=https://abit.itmo.ru/program/master/ai_product
