--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,12 @@ dependencies = [
     "lxml>=6.0.2",
     "requests>=2.32.5",
     "openai>=1.12.0",
+    "pymongo>=4.6.1",
+    "motor>=3.3.2",
+    "python-dotenv>=1.0.0",
+    "aiogram>=3.4.1",
+    "aiohttp>=3.9.1",
+    "sentence-transformers>=3.0.1",
+    "qdrant-client>=1.12.1",
+    "torch>=2.4.0",
 ]
