--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ lxml==5.1.0
 python-dotenv==1.0.0
 openai==1.12.0
 aiohttp==3.9.1
+pymongo==4.6.1
+motor==3.3.2
+sentence-transformers==3.0.1
+qdrant-client==1.12.1
+torch==2.4.0
